--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<swagger2.version>2.9.2</swagger2.version>
 	</properties>
 
 	<dependencies>
